force-app/main/default/objects/AcctPlanCapitalExpenditurePlan__c/AcctPlanCapitalExpenditurePlan__c.object-meta.xml
<CustomObject>
    <label>Account Plan Capital Expenditure Plan</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Plan Capital Expenditure Plan Na</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Plan Capital Expenditure Plan</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>