force-app/main/default/objects/AcctPlanCapitalExpenditurePlan__c/fields/AcctPlanWallet__c.field-meta.xml
<CustomField>
    <fullName>AcctPlanWallet__c</fullName>
    <label>Account Plan Wallet</label>
    <referenceTo>AcctPlanWallet__c</referenceTo>
    <relationshipLabel>Account Plan Capital Expenditure Plan</relationshipLabel>
    <relationshipName>Account_Plan_Capital_Expenditure_Plan</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>