force-app/main/default/objects/AcctPlanCapitalExpenditurePlan__c/fields/CreditFee__c.field-meta.xml
<CustomField>
    <fullName>CreditFee__c</fullName>
    <description>Credit Fee</description>
    <inlineHelpText>Credit Fee</inlineHelpText>
    <label>Credit Fee</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>