force-app/main/default/objects/AcctPlanCapitalExpenditurePlan__c/fields/FinancingRation__c.field-meta.xml
<CustomField>
    <fullName>FinancingRation__c</fullName>
    <description>Financing Ratio (%)</description>
    <inlineHelpText>Financing Ratio (%)</inlineHelpText>
    <label>Financing Ratio (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>