force-app/main/default/objects/AcctPlanCapitalExpenditurePlan__c/fields/FrontEndFee__c.field-meta.xml
<CustomField>
    <fullName>FrontEndFee__c</fullName>
    <description>Front End Fee (%)</description>
    <inlineHelpText>Front End Fee (%)</inlineHelpText>
    <label>Front End Fee (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>