force-app/main/default/objects/AcctPlanCapitalExpenditurePlan__c/fields/InvestmentLocation__c.field-meta.xml
<CustomField>
    <fullName>InvestmentLocation__c</fullName>
    <description>Investment Location</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Investment Location</inlineHelpText>
    <label>InvestmentLocation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>