force-app/main/default/objects/AcctPlanCapitalExpenditurePlan__c/fields/MisMatchCCY__c.field-meta.xml
<CustomField>
    <fullName>MisMatchCCY__c</fullName>
    <description>Mismatch currency with collection side?</description>
    <inlineHelpText>Mismatch currency with collection side?</inlineHelpText>
    <label>MisMatchCCY</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>