force-app/main/default/objects/AcctPlanCapitalExpenditurePlan__c/fields/NeedToHedgeInterest__c.field-meta.xml
<CustomField>
    <fullName>NeedToHedgeInterest__c</fullName>
    <description>Need to hedge interest rate risk?</description>
    <inlineHelpText>Need to hedge interest rate risk?</inlineHelpText>
    <label>NeedToHedgeInterest</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>