force-app/main/default/objects/AcctPlanCapitalExpenditurePlan__c/fields/OppForForeignCCY__c.field-meta.xml
<CustomField>
    <fullName>OppForForeignCCY__c</fullName>
    <description>Opportunity to make funding or investment  in foreign currency?</description>
    <inlineHelpText>Opportunity to make funding or investment  in foreign currency?</inlineHelpText>
    <label>OppForForeignCCY</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>