force-app/main/default/objects/AcctPlanCapitalExpenditurePlan__c/fields/ProjectAmount__c.field-meta.xml
<CustomField>
    <fullName>ProjectAmount__c</fullName>
    <description>Project amount (Unit: Baht)</description>
    <inlineHelpText>Project amount (Unit: Baht)</inlineHelpText>
    <label>Project amount (THB)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>