force-app/main/default/objects/AcctPlanCapitalExpenditurePlan__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <description>Purpose</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Purpose</inlineHelpText>
    <label>Purpose</label>
    <length>100</length>
    <type>Text</type>
</CustomField>