force-app/main/default/objects/AcctPlanCapitalExpenditurePlan__c/fields/TenorYearly__c.field-meta.xml
<CustomField>
    <fullName>TenorYearly__c</fullName>
    <description>Tenor (Year)</description>
    <inlineHelpText>Tenor (Year)</inlineHelpText>
    <label>Tenor (Yrs)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>